fix overflow close button on phones

--- a/src/components/ModalImage/style.scss
+++ b/src/components/ModalImage/style.scss
@@ -4,11 +4,18 @@
 .ModalImage {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   &__closeButton {
-    position: absolute;
-    right: 0.5em;
-    top: 0.5em;
+    position: relative;
+    left: calc(50% - 1rem);
+    margin-bottom: 0.2em;
+    @include for-tablet-portrait-up {
+      position: absolute;
+      left: auto;
+      margin-bottom: 0;
+      right: 0.5em;
+      top: 0.5em;
+    }
+
     cursor: pointer;
     color: $color-font-2;
     border: none;
